fix for windows

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   # Audio player
   just_audio: ^0.9.36
+  just_audio_windows: ^0.2.2
   # File picker
   file_picker: ^6.1.1
   # UUID
